test/bad/generics/call08.px

func f<A>(A->A g, A x) def
    return

f(2/_, 1)
